2004-10-08  Zoltan Varga  <vargaz@freemail.hu>

	* inssel-long32.brg (OP_LCONV_TO_OVF_I2): Fix CONV_I1 -> CONV_I2.

	* basic-long.cs: Add test for checked i8->i2 cast.

Wed Oct 6 12:40:28 CEST 2004 Paolo Molaro <lupus@ximian.com>

	* inssel-ppc.brg: added a couple of speedup rules.

2004-10-05  Zoltan Varga  <vargaz@freemail.hu>

	* Makefile.am (genmdesc_LDADD): Don't link this against libmetadata
	to speed up rebuilds.

2004-10-04  Neale Ferguson <Neale.Ferguson@SoftwareAG-usa.com>

	* mini-s390.c: Minor fix to OP_OR_IMM.

2004-10-03  Zoltan Varga  <vargaz@freemail.hu>

	* tramp-sparc.c (sparc_magic_trampoline): Handle appdomain stuff
	better. Fixes appdomain-unload.exe on sparc.

2004-10-02  Massimiliano Mantione  <massi@ximian.com>

	* ssa.c: Fixed casts to unsigned where the value was of 64 bits in
	simulate_long_compare, patch by will@exomi.com (Ville-Pertti Keinonen),
	see bug 67324.

2004-10-02  Zoltan Varga  <vargaz@freemail.hu>

	* jit-icalls.c: Handle a nonexisting trunc function more correctly.

2004-09-30  Lluis Sanchez Gual  <lluis@novell.com>

	* mini.c: Always generate a field read/write wrapper for members
	of the class MarshalByRefObject since the actual instance could
	be a CBO.

2004-09-28  Lluis Sanchez Gual  <lluis@novell.com>

	* mini.c: Use mono_thread_exit() to stop threads, instead of ExitThread.

2004-09-28  Zoltan Varga  <vargaz@freemail.hu>

	* driver.c mini.h trace.c: Move the setting of the main assembly into
	a separate function called mono_trace_set_assembly () and call it after
	actually loading the main assembly. Fixes #66872.

2004-09-25  Zoltan Varga  <vargaz@freemail.hu>

	* mini-amd64.h mini-amd64.c tramp-amd64.c: Allocate trampoline memory
	using the code manager.

2004-09-24  Zoltan Varga  <vargaz@freemail.hu>

	* tramp-amd64.c mini-amd64.h: Add support for MONO_ARCH_HAVE_INVALIDATE_METHOD.

2004-09-23  Zoltan Varga  <vargaz@freemail.hu>

	* cpu-amd64.md: Fix bug in previous patch.
	